# L2_RRM_Sim

./: .gitignore  app.py  compare_srs_perf.py  pyproject.toml  todo.md  verify_baseline_sc_su.py
calibration/: layer1_phy_bler.py  layer2_channel_model.py  layer3_l2_functions.py  layer4_e2e_kpi.py  utils.py
calibration_report/: layer1_phy_abstraction.md  layer2_channel_model.md  layer3_l2_functions.md  layer4_e2e_kpi.md  summary.md
configs/: default_single_cell.yaml  multicell_7site.yaml
examples/: custom_scheduler.py  run_batch.py  run_ftp_traffic.py  run_multi_scenario_test.py  run_multicell.py  run_single_cell_full_buffer.py  run_sionna_channel.py
l2_rrm_sim/: __init__.py
l2_rrm_sim/channel/: __init__.py  antenna_model.py  channel_estimator.py  channel_interface.py  csi_feedback.py  estimator_interface.py  fast_fading.py  interference_model.py  pathloss_models.py  ray_tracing_channel.py  sionna_channel.py  statistical_channel.py
l2_rrm_sim/config/: __init__.py  sim_config.py
l2_rrm_sim/core/: __init__.py  builtin_registry.py  data_types.py  enums.py  multicell_engine.py  nr_constants.py  registry.py  resource_grid.py  simulation_engine.py  tdd_config.py  topology.py
l2_rrm_sim/csi/: __init__.py  codebook.py  cqi_table.py  csi_feedback.py  sinr_prediction.py  srs_manager.py
l2_rrm_sim/harq/: __init__.py  harq_buffer.py  harq_entity.py
l2_rrm_sim/kpi/: __init__.py  event_bus.py  experienced_rate.py  kpi_collector.py  kpi_plotter.py  kpi_reporter.py
l2_rrm_sim/link_adaptation/: __init__.py  bler_tables.py  (+8 more)
tests/: test_smoke.py  test_ui_baseline.py
(+23 files in other folders)
